route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: hello-openshift
    app.kubernetes.io/component: hello-openshift
    app.kubernetes.io/instance: hello-openshift
  name: hello-openshift
  namespace: hello-openshift
spec:
  host: ""
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: hello-openshift
    weight: 100
